--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,11 @@
     flex-direction: row;
     justify-content: space-between;
 }
+@media (max-width: 749px) {
+    .header-nav {
+        display: none;
+    }
+}
 
 .nav-item {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -39,6 +44,10 @@
     list-style-type: none;
     text-transform: uppercase;
     margin-left: 25px;
+}
+.nav-item:hover {
+    color: #6c7279;
+    transition: 2s ease;
 }
 
 .fullscreen-back {
@@ -62,30 +71,34 @@
 }
 
 .fullscreen-content {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center; */
     margin-top: 156px;
 }
 
 .fullscreen-title {
-    font-family: "Open Sans";
+    font-family: "Raleway";
     font-size: 65px;
     color:#ffffff;
     font-weight: 900;
-    margin: 0 60px;
+    margin: 0 0;
     text-align: center;
+    line-height: normal;
     text-transform: uppercase;
 }
 
 .fullscreen-text {
-    font-family: 'Open Sans';
+    font-family: "Raleway";
     font-size: 22px;
     color: #ffffff;
     font-weight: 100;
     margin-top: 41px;
     text-align: center;
     line-height: normal;
+    max-width: 912px;;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .fullscreen-button {
@@ -99,9 +112,18 @@
     margin: auto;
     margin-top: 77px;
 }
+.fullscreen-button:hover {
+    background-color: #6c7279;
+    transition: 1s ease;
+}
+@media (max-width: 580px) {
+    .fullscreen-button {
+        width: 100%;
+    }
+}
 
 .fullscreen-button-text {
-    font-family: 'Open Sans';
+    font-family: "Raleway";
     font-size: 13px;
     font-weight: 600;
     color: #ffffff;
@@ -116,6 +138,11 @@
     justify-content: space-between;
     margin-top: 70px;
 }
+@media (max-width: 629px) {
+    .block-icons {
+        justify-content: center;
+    }
+}
 
 .block-icons-cart {
     display: flex;
@@ -123,12 +150,16 @@
     justify-content: center;
     max-width: 300px;
     margin-bottom: 78px;
-    padding: 0 -15px;
+    /* padding: 0 -15px; */
 }
 
 .icon-image {
     display: block;
     margin: auto;
+}
+.icon-image:hover {
+    transform: scale(1.3);
+    transition: 2s ease;
 }
 
 .icon-title {
@@ -152,17 +183,445 @@
 }
 
 .pictures-block {
-    /* width: 100%; */
-}
-
-.first-line-pictures {
+    width: 100%;
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    height: 30vh;
+    flex-wrap: wrap;
+    margin-bottom: 30vh;
+} 
+@media (max-width: 770px) {
+    .pictures-block{
+        margin-bottom: 100vh;
+    }
 }
 
-.line-picture {
-    display: block;
-    object-fit: fill;
+.test-img {
+    position: static;
+    width: 25%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+@media (max-width: 770px) {
+    .test-img {
+        width: 50%;
+    }
+}
+
+.test-img:hover {
+    transition: all 0.75s ease-in-out;
+}
+
+.project-link {
+    text-transform: uppercase;
+    margin-bottom: 15px;
+    font-weight: 900;
+}
+
+.test-link {
+    font-family: 'Raleway';
+    color: #ffffff;
+    font-size: 14px;
+    opacity:0;
+}
+
+.test-img:hover .test-link {
+    color: #ffffff;
+    font-family: 'Raleway';
+    transition: all 0.75s ease-in-out;
+    font-size: 25x;
+    opacity:1;
+}
+
+.front-first-line-picture {
+    background: url(../images/secondblock1.jpg) no-repeat;
+    background-size: cover;
+}
+.front-second-line-picture {
+    background: url(../images/secondblock2.jpg) no-repeat;
+    background-size: cover;
+}
+.front-third-line-picture {
+    background: url(../images/secondblock3.jpg) no-repeat;
+    background-size: cover;
+}
+.front-fourth-line-picture {
+    background: url(../images/secondblock4.jpg) no-repeat;
+    background-size: cover;
+}
+.front-sixth-line-picture {
+    background: url(../images/secondblock6.jpg) no-repeat;
+    background-size: cover;
+}
+.front-seventh-line-picture {
+    background: url(../images/secondblock7.jpg) no-repeat;
+    background-size: cover;
+}
+.front-eighth-line-picture {
+    background: url(../images/secondblock8.jpg) no-repeat;
+    background-size: cover;
+}
+.front-fifth-line-picture {
+    background: url(../images/secondblock5.jpg) no-repeat;
+    background-size: cover;
+}
+.front-first-line-picture:hover {
+    background: url(../images/secondblock21.jpg) no-repeat;
+    background-size: cover;
+}
+.front-second-line-picture:hover {
+    background: url(../images/secondblock22.jpg) no-repeat;
+    background-size: cover;
+}
+.front-third-line-picture:hover {
+    background: url(../images/secondblock23.jpg) no-repeat;
+    background-size: cover;
+}
+.front-fourth-line-picture:hover {
+    background: url(../images/secondblock24.jpg) no-repeat;
+    background-size: cover;
+}
+.front-sixth-line-picture:hover {
+    background: url(../images/secondblock26.jpg) no-repeat;
+    background-size: cover;
+}
+.front-seventh-line-picture:hover {
+    background: url(../images/secondblock27.jpg) no-repeat;
+    background-size: cover;
+}
+.front-eighth-line-picture:hover {
+    background: url(../images/secondblock28.jpg) no-repeat;
+    background-size: cover;
+}
+.front-fifth-line-picture:hover {
+    background: url(../images/secondblock25.jpg) no-repeat;
+    background-size: cover;
+}
+
+.persons-container-block {
+    margin-top: 78px;
+    margin-bottom: 78px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: -15px;
+}
+@media (max-width: 592px) {
+    .persons-container-block{
+        justify-content: center;
+    }
+}
+
+.person-description {
+    display: flex;
+    flex-direction: column;
+    max-width: 280px;
+    justify-content: start;
+    margin-bottom: 15px;
+    padding: 15px;
+}
+
+.person-image {
+    margin-bottom: 30px;
+}
+.person-image:hover {
+    transform: scale(1.1);
+    transition: 2s ease;
+}
+
+.person-title {
+    font-family: "Raleway";
+    font-size: 22px;
+    color: #2d3033;
+    font-weight: 500;
+    text-align: start;
+    margin-bottom: 10px;
+}
+
+.person-subtitle {
+    font-family: "Raleway";
+    font-size: 13px;
+    color: #e84545;
+    font-weight: 500;
+    text-align: start;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+}
+
+.person-text {
+    font-family: "Raleway";
+    font-size: 13px;
+    color: #6c7279;
+    font-weight: 400;
+    text-align: start;
+    margin-bottom: 30px;
+    line-height: normal;
+}
+
+.social-icons {
+    display: flex;
+    flex-direction: row;
+}
+
+.icon {
+    font-size: 15px;
+    color: #c6cacc;
+    border: solid 1px #c6cacc;
+    padding: 5px;
+    margin-left: 3px;
+}
+.icon:hover {
+    color: #2d3033;
+    border: solid 1px #2d3033;
+    transition: 2s ease;
+}
+
+.slider-container {
+    display: flex;
+    flex-direction: row;
     width: 100%;
+}
+@media (max-width: 837px) {
+    .slider-container {
+        flex-direction: column;
+    }
+}
+
+.girl-picture {
+    width: 50%;
+}
+@media (max-width: 837px) {
+    .girl-picture {
+        width: 100%;
+    }
+}
+@media (max-width: 500px) {
+    .girl-picture {
+       display: none;;
+    }
+}
+
+.girl-slide {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+}
+
+.slider-content {
+    display: flex;
+    flex-direction: column;
+    background-color: #53354a;
+    width: 50%;
+}
+@media (max-width: 837px) {
+    .slider-content {
+        width: 100%;
+        align-items: center;
+    }
+}
+
+.slider-title {
+    font-family: 'Cardo';
+    font-size: 2.5vw;
+    color: #ffffff;
+    font-style: italic;
+    margin-left: 5.25vw;
+    margin-top: 6.9vw;
+    margin-right: 7.5vw;
+    margin-bottom: 1.8vw;
+}
+@media (max-width: 837px) {
+    .slider-title {
+        margin: 6.9vw;
+        text-align: center;
+    }
+}
+
+.slider-text {
+    font-family: 'Raleway';
+    font-size: 0.8vw;
+    color: #ffffff;
+    text-transform: uppercase;
+    margin-left: 5.25vw;
+    margin-bottom: 4vw;
+}
+@media (max-width: 837px) {
+    .slider-text {
+        margin: -2vw;
+        text-align: center;
+    }
+}
+
+.circle {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 5.8vw;
+    margin-left: 5.25vw;
+    margin-bottom: 6.6vw;
+}
+@media (max-width: 837px) {
+    .circle {
+        justify-content: center;
+        margin-left: 0;
+        margin-top: 4vh;
+    }
+}
+
+.round {
+    border-radius: 3.1vw;
+    opacity: 20%;
+    background-color: #ffffff;
+    width: 0.75vw;
+    height: 0.75vw;
+}
+
+.download-title {
+    margin-top: 78px;
+    font-family: "Raleway";
+    font-size: 28px;
+    color: #2d3033;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 26px;
+}
+
+.download-subtitle {
+    font-family: "Raleway";
+    font-size: 13px;
+    color: #2d3033;
+    font-weight: 900;
+    text-align: center;
+    margin-bottom: 40px;
+    text-transform: uppercase;
+}
+
+.download-button {
+    width: 280px;
+    border-radius: 2px;
+    background-color: #e84545;
+    align-items: center;
+    margin: auto;
+    margin-bottom: 78px;
+}
+.download-button:hover {
+    background-color: #6c7279;
+    transition: 1s ease;
+}
+@media (max-width: 580px) {
+    .download-button {
+        width: 100%;
+    }
+}
+
+.download-button-text {
+    font-family: "Raleway";
+    font-size: 13px;
+    font-weight: 600;
+    color: #ffffff;
+    text-align: center;
+    padding: 18px 0 18px 0;
+    text-transform: uppercase;
+}
+
+.about {
+    background-color: #3a3e64;
+}
+
+.about-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 78px;
+    margin-bottom: 78px;
+    padding-left: 15%;
+}
+@media (max-width: 930px) {
+    .about-content {
+        padding-left: 0%;
+    }
+}
+
+.location {
+    max-width: 150px;
+    margin-bottom: 15px;
+}
+
+.about-title {
+    font-family: "Raleway";
+    font-size: 14px;
+    color: #ffffff;
+    font-weight: 900;
+    text-align: center;
+    margin-bottom: 22px;
+    text-transform: uppercase;
+}
+
+.about-text {
+    font-family: "Raleway";
+    font-size: 14px;
+    color: #ffffff;
+    opacity: 50%;
+    font-weight: 500;
+    text-align: center;
+    line-height: normal;
+}
+
+.share {
+    max-width: 150px;
+    margin-bottom: 15px;
+}
+
+.white {
+    justify-content: center;
+}
+
+.icon-white {
+    font-size: 15px;
+    color: #ffffff;
+    border: solid 1px #ffffff;
+    padding: 5px;
+    margin-left: 3px
+}
+.icon-white:hover {
+    color: #2d3033;
+    border: solid 1px #2d3033;
+    transition: 2s ease;
+}
+
+.active {
+    max-width: 330px;
+    margin-bottom: 15px;
+}
+
+.copy {
+    background-color: #313454;
+}
+
+.copy-text {
+    font-family: "Raleway";
+    font-size: 14px;
+    color: #808080;
+    font-weight: 500;
+    text-align: center;
+    line-height: normal;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    max-width: 315px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.fas {
+    color: #e84545;
+    font-size: 12px;
+}
+
+.by {
+    color: #ffffff;
 }
